--- a/Gui/MainWindow.xaml
+++ b/Gui/MainWindow.xaml
@@ -1,201 +1,16 @@
-﻿<Window x:Class="Gui.MainWindow"
+﻿<hc:BlurWindow x:Class="Gui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gui"
         mc:Ignorable="d"
-        xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" xmlns:advertencias="clr-namespace:Gui.Advertencias"
+        xmlns:hc="https://handyorg.github.io/handycontrol"
+        xmlns:vistas="clr-namespace:Gui.Vistas"
         TextOptions.TextFormattingMode="Display"
         WindowState="Maximized" x:Name="Me"
         Title="My8086" Height="562" Width="834">
-    <DockPanel>
-        <ToolBarPanel ClipToBounds="True" DockPanel.Dock="Top" Background="#FF2D2D30">
-            <ToolBar Margin="-5,0,-13,0" Padding="5,0,0,0" ToolBarTray.IsLocked="True" OverflowMode="Never" Background="#FF2D2D30" BorderThickness="0" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" >
-                <ToolBar.Resources>
-                    <Style TargetType="{x:Type Image}">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type ButtonBase}, AncestorLevel=1}, Path=IsEnabled}" Value="False">
-                                <Setter Property="Opacity" Value="0.30" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                    <Style x:Key="ToolBarMainPanelBorderStyle" TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="0,0,0,0"/>
-                    </Style>
-                </ToolBar.Resources>
-                <Button Click="OpenFileClick">
-                    <Image Source="Images/Open.png" Height="16"/>
-                </Button>
-                <Button Click="SaveFileClick">
-                    <Image Source="Images/Save.png" Height="16"/>
-                </Button>
-                <Separator/>
-                <Button Command="Cut">
-                    <Image Source="Images/Cut.png" Height="16"/>
-                </Button>
-                <Button Command="Copy">
-                    <Image Source="Images/Copy.png" Height="16"/>
-                </Button>
-                <Button Command="Paste">
-                    <Image Source="Images/Paste.png" Height="16"/>
-                </Button>
-                <Button Command="Delete">
-                    <Image Source="Images/Delete.png" Height="16"/>
-                </Button>
-                <Separator/>
-                <Button Command="Undo">
-                    <Image Source="Images/Undo.png" Height="16"/>
-                </Button>
-                <Button Command="Redo">
-                    <Image Source="Images/Redo.png" Height="16"/>
-                </Button>
-                <Separator/>
-                <CheckBox Visibility="Collapsed" IsChecked="{Binding ElementName=textEditor,Path=WordWrap}">
-                    <Image Source="Images/WordWrap.png" Height="16"/>
-                </CheckBox>
-                <CheckBox Visibility="Collapsed" IsChecked="{Binding ElementName=textEditor,Path=ShowLineNumbers}">
-                    <TextBlock Width="16" TextAlignment="Center">#</TextBlock>
-                </CheckBox>
-                <CheckBox Visibility="Collapsed" IsChecked="{Binding ElementName=textEditor,Path=Options.ShowEndOfLine}">
-                    <TextBlock Width="16" TextAlignment="Center">¶</TextBlock>
-                </CheckBox>
-                <Button Click="Ejecutar">
-                    <Image Source="Images/Run_16x.png"  Height="16"/>
-                </Button>
-                <Button Click="CompilarYEjecutar">
-                    <Image Source="Images/CompilarEjecutar.png"  Height="16"/>
-                </Button>
-                <Button Click="Compilar" >
-                    <DockPanel>
-                        <Image DockPanel.Dock="Left" MaxWidth="25" Source="Images/BuildSolution_16x.png" Height="16"/>
-                        <ProgressBar IsIndeterminate="True" Visibility="Visible" MinHeight="16" DockPanel.Dock="Top" MinWidth="200" Grid.Column="1" x:Name="ProgresoCompilacion"/>
-                    </DockPanel>
-                </Button>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                    <TextBlock FontSize="16" Margin="5,0" VerticalAlignment="Center" Text="Ejemplos" Foreground="White"/>
-                    <ComboBox x:Name="CmbxEjemplos" SelectionChanged="CmbxEjemplos_SelectionChanged" FontSize="16" Margin="5,0" MinWidth="200"/>
-                </StackPanel>
-                <TextBlock Foreground="White" x:Name="TxtArchivo" VerticalAlignment="Center" FontSize="18"/>
-            </ToolBar>
-        </ToolBarPanel>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="0"/>
-            </Grid.ColumnDefinitions>
-            <Grid Background="#FF2D2D30">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition Height="5"/>
-                    <RowDefinition MinHeight="50" MaxHeight="250"/>
-                </Grid.RowDefinitions>
-                <TabControl Background="#FF2D2D30" Margin="0" Padding="0" BorderBrush="#FF2D2D30">
-                    <TabItem  Padding="0" Margin="0" Background="#FF2D2D30">
-                        <TabItem.Header>
-                            <Border BorderThickness="1" Background="#FF2D2D30" BorderBrush="#FFABADB3">
-                                <ContentPresenter>
-                                    <ContentPresenter.Content>
-                                        <TextBlock FontSize="18" Margin="4" Text="Ensamblador" Foreground="White"/>
-                                    </ContentPresenter.Content>
-                                </ContentPresenter>
-                            </Border>
-
-                        </TabItem.Header>
-
-                        <avalonedit:TextEditor
-                    Name="TxtMy"
-                    FontFamily="Consolas"
-                    Background="#FF2D2D30"
-                    Foreground="White"
-                    FontSize="14pt"
-                   SyntaxHighlighting="ASM"
-                    ShowLineNumbers="True" WordWrap="True">
-                            <avalonedit:TextEditor.VerticalScrollBarVisibility>Auto</avalonedit:TextEditor.VerticalScrollBarVisibility>
-                            <avalonedit:TextEditor.Resources>
-                                <Style TargetType="ScrollBar">
-                                    <Setter Property="Background" Value="#FF686868"/>
-                                </Style>
-                            </avalonedit:TextEditor.Resources>
-                        </avalonedit:TextEditor>
-                    </TabItem>
-                    <TabItem  Padding="0" Margin="0" Background="#FF2D2D30">
-                        <TabItem.Header>
-                            <Border BorderThickness="1" Background="#FF2D2D30" BorderBrush="#FFABADB3">
-                                <ContentPresenter>
-                                    <ContentPresenter.Content>
-                                        <TextBlock FontSize="18" Margin="4" Text="Código máquina" Foreground="White"/>
-                                    </ContentPresenter.Content>
-                                </ContentPresenter>
-                            </Border>
-                        </TabItem.Header>
-                        <avalonedit:TextEditor
-                    Name="TxtAsm"
-                    IsReadOnly="True"        
-                    FontFamily="Consolas"
-                    Background="#FF2D2D30"
-                    Foreground="White"
-                    FontSize="14pt"
-                    SyntaxHighlighting="ASM"
-                    ShowLineNumbers="True" WordWrap="True">
-                            <avalonedit:TextEditor.VerticalScrollBarVisibility>Auto</avalonedit:TextEditor.VerticalScrollBarVisibility>
-                            <avalonedit:TextEditor.Resources>
-                                <Style TargetType="ScrollBar">
-                                    <Setter Property="Background" Value="#FF686868"/>
-                                </Style>
-                            </avalonedit:TextEditor.Resources>
-                        </avalonedit:TextEditor>
-                    </TabItem>
-                </TabControl>
-                <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" Background="#FF434346"/>
-                <DockPanel Grid.Row="2">
-                    <TabControl x:Name="TabErrores" DockPanel.Dock="Bottom" Background="#FF7A7B7C">
-                        <TabItem Padding="0" Margin="0" Background="#FF2D2D30">
-                            <TabItem.Header>
-                                <Border BorderThickness="1" Background="#FF2D2D30" BorderBrush="#FFABADB3">
-                                    <ContentPresenter>
-                                        <ContentPresenter.Content>
-                                            <TextBlock FontSize="18" Margin="4" Text="Lista de errores" Foreground="White"/>
-                                        </ContentPresenter.Content>
-                                    </ContentPresenter>
-                                </Border>
-                            </TabItem.Header>
-                            <Grid>
-                                <ScrollViewer  HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Background="#FF2D2D30">
-                                    <ListView DataContext="{Binding Errores,ElementName=Me}" ItemsSource="{Binding Resultados}" HorizontalContentAlignment="Stretch" Background="#FF2D2D30" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
-                                        <ListView.ItemTemplate>
-                                            <DataTemplate>
-                                                <advertencias:WarningError HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Excepcion="{Binding .}" VerLinea="VerLinea"/>
-                                            </DataTemplate>
-                                        </ListView.ItemTemplate>
-                                    </ListView>
-                                </ScrollViewer>
-                            </Grid>
-                        </TabItem>
-                        <TabItem Padding="0" Margin="0">
-                            <TabItem.Header>
-                                <Border BorderThickness="1" Background="#FF2D2D30" BorderBrush="#FFABADB3">
-                                    <ContentPresenter>
-                                        <ContentPresenter.Content>
-                                            <TextBlock FontSize="18" Margin="4" Text="Salida" Foreground="White"/>
-                                        </ContentPresenter.Content>
-                                    </ContentPresenter>
-                                </Border>
-                            </TabItem.Header>
-                            <Grid Margin="0">
-                                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                                    <TextBox Foreground="GreenYellow" BorderBrush="#FF0078D7" Padding="0" Margin="0" x:Name="Salida" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Background="#FF2D2D30">
-
-                                    </TextBox>
-                                </ScrollViewer>
-                            </Grid>
-                        </TabItem>
-                    </TabControl>
-                </DockPanel>
-
-            </Grid>
-
-           
-        </Grid>
-    </DockPanel>
-</Window>
+    <hc:TransitioningContentControl>
+        <vistas:Editor/>
+    </hc:TransitioningContentControl>
+</hc:BlurWindow>
