--- a/Compilador/Views/Editor.xaml
+++ b/Compilador/Views/Editor.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="Gui.Views.Editor"
+﻿<local:NavigationUserControl x:Class="Gui.Views.Editor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Gui.Views"
-             xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" xmlns:advertencias="clr-namespace:Gui.Advertencias"
-             mc:Ignorable="d" 
+             xmlns:hc="https://handyorg.github.io/handycontrol" 
+             xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" xmlns:advertencias="clr-namespace:Gui.Advertencias"
+             mc:Ignorable="d"  x:Name="Me"
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
         <ToolBarPanel ClipToBounds="True" DockPanel.Dock="Top" >
@@ -90,20 +91,22 @@
                 </Grid.RowDefinitions>
                 <hc:TransitioningContentControl>
                     <avalonedit:TextEditor
-                    Name="TxtMy"
+                        Background="{DynamicResource MainContentBackgroundBrush}"
+                        Foreground="{DynamicResource PrimaryTextBrush}"
+                    Name="TxtMy" 
                     FontFamily="Consolas"
-                    FontSize="14pt"
+                    FontSize="14pt" LineNumbersForeground="{DynamicResource PrimaryTextBrush}"
                    SyntaxHighlighting="ASM"
                     ShowLineNumbers="True" WordWrap="True">
                         <avalonedit:TextEditor.VerticalScrollBarVisibility>Auto</avalonedit:TextEditor.VerticalScrollBarVisibility>
-                        <avalonedit:TextEditor.Resources>
+                        <!--<avalonedit:TextEditor.Resources>
                             <Style TargetType="ScrollBar">
                                 <Setter Property="Background" Value="#FF686868"/>
                             </Style>
-                        </avalonedit:TextEditor.Resources>
+                        </avalonedit:TextEditor.Resources>-->
                     </avalonedit:TextEditor>
                 </hc:TransitioningContentControl>
-                <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" Background="#FF434346"/>
+                <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" Background="{DynamicResource SecondaryRegionBrush}" />
 
 
 
@@ -129,28 +132,28 @@
                         <Style TargetType="{x:Type TabItem}">
                             <Setter Property="Template">
                                 <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type TabItem}">
-                                        <Grid>
-                                            <Border 
+                                    <ControlTemplate TargetType="{x:Type TabItem}" >
+
+                                        <Border 
                                 Name="Border"
                                 Margin="0,0,-4,0" 
-
+                                            Background="Transparent"
                                 BorderThickness="1,1,1,1" 
                                 CornerRadius="2,12,0,0" >
-                                                <ContentPresenter x:Name="ContentSite"
-                                    VerticalAlignment="Center"
+                                            <ContentPresenter x:Name="ContentSite"
+                                    VerticalAlignment="Center"   
                                     HorizontalAlignment="Center"
                                     ContentSource="Header"
                                     Margin="12,2,12,2"
                                     RecognizesAccessKey="True"/>
-                                            </Border>
-                                        </Grid>
+                                        </Border>
+
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
                                                 <Setter Property="Panel.ZIndex" Value="100" />
-                                                <Setter TargetName="Border" Property="Background" Value="{DynamicResource LightPrimaryColor}" />
+                                                <Setter TargetName="Border" Property="Background" Value="{DynamicResource MainContentBackgroundBrush}"/>
                                                 <Setter TargetName="Border" Property="BorderThickness" Value="1,1,1,0" />
-                                                <Setter Property="Foreground" Value="{DynamicResource PrimaryColor}" />
+                                                <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}" />
                                             </Trigger>
                                             <Trigger Property="IsEnabled" Value="False">
                                                 <Setter TargetName="Border" Property="Background" Value="{StaticResource SecondaryRegionBrush}" />
@@ -164,34 +167,53 @@
                         </Style>
                     </Grid.Resources>
 
-                    <TabControl  x:Name="TabErrores" DockPanel.Dock="Bottom" Background="#FF7A7B7C">
+                    <TabControl  x:Name="TabErrores" DockPanel.Dock="Bottom" >
                         <TabItem Padding="0" Margin="0">
                             <TabItem.Header>
-                                <hc:Card Background="{DynamicResource SecondaryRegionBrush}">
-                                    <TextBlock Margin="3" Text="Lista de errores"/>
-                                </hc:Card>
+
+                                <Label BorderThickness="0" Background="Transparent" Margin="0" Content="Lista de errores" />
                             </TabItem.Header>
-                            <Grid>
-                                <ScrollViewer  HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
-                                    <ListView Style="{x:Null}" DataContext="{Binding Errores,ElementName=Me}" ItemsSource="{Binding Resultados}" HorizontalContentAlignment="Stretch"  ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
-                                        <ListView.ItemTemplate>
+                            <!--<Grid>-->
+                                <!--<ScrollViewer  HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" >-->
+
+                            <ItemsControl 
+                                          Background="{DynamicResource MainContentBackgroundBrush}" Style="{x:Null}" DataContext="{Binding Errores,ElementName=Me}" ItemsSource="{Binding Resultados}" HorizontalContentAlignment="Stretch"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Vertical"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <advertencias:WarningError Margin="3" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Excepcion="{Binding .}" VerLinea="VerLinea"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            
+                            <!--<ListView BorderThickness="0" Background="{DynamicResource MainContentBackgroundBrush}" Style="{x:Null}" DataContext="{Binding Errores,ElementName=Me}" ItemsSource="{Binding Resultados}" HorizontalContentAlignment="Stretch"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="Focusable" Value="false"/>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                                <ListView.ItemTemplate>
                                             <DataTemplate>
                                                 <advertencias:WarningError HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Excepcion="{Binding .}" VerLinea="VerLinea"/>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
-                                    </ListView>
-                                </ScrollViewer>
-                            </Grid>
+                                    </ListView>-->
+                                <!--</ScrollViewer>-->
+                            <!--</Grid>-->
                         </TabItem>
                         <TabItem Padding="0" Margin="0">
                             <TabItem.Header>
-                                <hc:Card Background="{DynamicResource SecondaryRegionBrush}">
-                                    <TextBlock Margin="3" Text="Salida"/>
-                                </hc:Card>
+
+                                <Label Margin="0" BorderThickness="0" Background="Transparent"  Content="Salida" />
+
                             </TabItem.Header>
                             <Grid Margin="0">
                                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                                    <TextBox BorderBrush="#FF0078D7" Padding="0" Margin="0" x:Name="Salida" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" >
+                                    <TextBox  Background="{DynamicResource MainContentBackgroundBrush}" BorderThickness="0"  Padding="0" Margin="0" x:Name="Salida" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" >
 
                                     </TextBox>
                                 </ScrollViewer>
@@ -206,4 +228,4 @@
 
         </Grid>
     </DockPanel>
-</UserControl>
+</local:NavigationUserControl>
