--- a/Compilador/Views/Ejecutar.xaml
+++ b/Compilador/Views/Ejecutar.xaml
@@ -7,6 +7,7 @@
              xmlns:hc="https://handyorg.github.io/handycontrol" 
              xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" 
              xmlns:registros="clr-namespace:_8086VCPU.Registros;assembly=8086VCPU"
+             xmlns:cpu="clr-namespace:_8086VCPU;assembly=8086VCPU"
              mc:Ignorable="d"  x:Name="Me"
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
@@ -68,7 +69,7 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" Text="{Binding High.Decimal,Mode=OneWay,StringFormat=X2}"/>
                             <TextBox FontSize="18" Grid.Column="2" Text="{Binding Low.Decimal,Mode=OneWay,StringFormat=X2}"/>
@@ -81,7 +82,7 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" DataContext="{Binding High}" Text="{Binding Decimal,Mode=OneWay,StringFormat=X2}"/>
                             <TextBox FontSize="18" Grid.Column="2" DataContext="{Binding Low}" Text="{Binding Decimal,Mode=OneWay,StringFormat=X2}"/>
@@ -94,7 +95,7 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" DataContext="{Binding High}" Text="{Binding Decimal,Mode=OneWay,StringFormat=X2}"/>
                             <TextBox FontSize="18" Grid.Column="2" DataContext="{Binding Low}" Text="{Binding Decimal,Mode=OneWay,StringFormat=X2}"/>
@@ -107,7 +108,7 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" DataContext="{Binding High}" Text="{Binding Decimal,Mode=OneWay,StringFormat=X2}"/>
                             <TextBox FontSize="18" Grid.Column="2" DataContext="{Binding Low}" Text="{Binding Decimal,Mode=OneWay,StringFormat=X2}"/>
@@ -121,7 +122,7 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" Text="{Binding Decimal,Mode=OneWay,StringFormat=X4}" Grid.ColumnSpan="2"/>
                         </Grid>
@@ -133,7 +134,7 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" Text="{Binding Decimal,Mode=OneWay,StringFormat=X4}"  Grid.ColumnSpan="2"/>
                         </Grid>
@@ -145,9 +146,56 @@
                             </Grid.ColumnDefinitions>
                             <Button Background="{DynamicResource MainContentBackgroundBrush}"
                                     BorderBrush="{DynamicResource BorderBrush}"
-                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Click="VistaRegistro_Click"
                                     VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch" FontSize="18" Content="{Binding Nombre}" HorizontalAlignment="Stretch"/>
                             <TextBox FontSize="18" Grid.Column="1" Text="{Binding Decimal,Mode=OneWay,StringFormat=X4}"  Grid.ColumnSpan="2"/>
+                        </Grid>
+
+                        <Grid DataContext="{x:Static cpu:CPU.Banderas}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Button Background="{DynamicResource MainContentBackgroundBrush}"
+                                    BorderBrush="{DynamicResource BorderBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}"
+                                    VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch">
+                                <StackPanel Margin="3">
+                                    <TextBlock FontSize="18" Text="Acarreo"/>
+                                    <CheckBox IsChecked="{Binding Carry,Mode=OneWay}"/>
+                                </StackPanel>
+                            </Button>
+                            <Button Background="{DynamicResource MainContentBackgroundBrush}"
+                                    BorderBrush="{DynamicResource BorderBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Grid.Column="1"
+                                    VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch">
+                                <StackPanel Margin="3">
+                                    <TextBlock FontSize="18" Text="Signo"/>
+                                    <CheckBox IsChecked="{Binding Signo,Mode=OneWay}"/>
+                                </StackPanel>
+                            </Button>
+                            <Button Background="{DynamicResource MainContentBackgroundBrush}"
+                                    BorderBrush="{DynamicResource BorderBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Grid.Column="2"
+                                    VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch">
+                                <StackPanel Margin="3">
+                                    <TextBlock FontSize="18" Text="Zero"/>
+                                    <CheckBox IsChecked="{Binding Zero,Mode=OneWay}"/>
+                                </StackPanel>
+                            </Button>
+                        </Grid>
+
+                        <Grid DataContext="{x:Static cpu:CPU.Banderas}">
+                            <Button Background="{DynamicResource MainContentBackgroundBrush}"
+                                    BorderBrush="{DynamicResource BorderBrush}"
+                                    Foreground="{DynamicResource PrimaryTextBrush}" Grid.Column="2"
+                                    VerticalContentAlignment="Center" Style="{x:Null}" VerticalAlignment="Stretch">
+                                <StackPanel Margin="3">
+                                    <TextBlock FontSize="18" Text="OverFlow"/>
+                                    <CheckBox IsChecked="{Binding OverFlow,Mode=OneWay}"/>
+                                </StackPanel>
+                            </Button>
                         </Grid>
                     </StackPanel>
                 </GroupBox>
