Estable sin direccionamiento inverso

--- a/Compilador/Views/Editor.xaml
+++ b/Compilador/Views/Editor.xaml
@@ -62,13 +62,13 @@
                 <Button Click="Ejecutar" ToolTip="Ejecutar">
                     <Image Source="/Gui;component/Images/Run_16x.png"  Height="16"/>
                 </Button>
-                <Button Click="CompilarYEjecutar" ToolTip="Compilar y ejecutar">
+                <Button Click="CompilarYEjecutar" ToolTip="Ensamblar y ejecutar">
                     <Image Source="/Gui;component/Images/CompilarEjecutar.png"  Height="16"/>
                 </Button>
-                <Button Click="Compilar" ToolTip="Compilar">
+                <Button Click="Compilar" ToolTip="Ensamblar">
                     <DockPanel>
                         <Image DockPanel.Dock="Left" MaxWidth="25" Source="/Gui;component/Images/BuildSolution_16x.png" Height="16"/>
-                        <ProgressBar IsIndeterminate="True" Visibility="Visible" MinHeight="16" DockPanel.Dock="Top" MinWidth="200" Grid.Column="1" x:Name="ProgresoCompilacion"/>
+                        <TextBlock Text="Ensamblar" Visibility="Visible" MinHeight="16" DockPanel.Dock="Top" MinWidth="200" Grid.Column="1"/>
                     </DockPanel>
                 </Button>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
